--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav {
 .content1{display: flex;font-family: "Open Sans", sans-serif;background-image: url(./images/developer.png);background-repeat: no-repeat;background-size: contain;background-image: url(./images/header_bg.png);background-position: right bottom;}
 
 .content{margin: 100px;}
-.my-img{width: 200px;}
+.my-img{width: 100%;}
 .hi{font-weight: 600;}
 .name{font-weight: 900;font-size: xx-large;}
 .image-div{margin: 100px;}
@@ -68,4 +68,13 @@ nav {
   .download-button-margin{margin: 10px;}
 nav ul li a {text-decoration: none;}
 .hireme-button a{text-decoration: none;}
-  
+.about-me{text-align: center;background-color: white;font-family: "Open Sans", sans-serif;}
+.full-about-me{margin:100px 200px;background-color: white;}
+  .content2{margin: 50px;background-color: #FFF8F3;padding: 10px;}
+  .contact-info{display: flex;justify-content: space-evenly;font-family: "Open Sans", sans-serif;gap: 20px;}
+  .contact-info h1{font-size: small;}
+  .what-i-do-section{text-align: center;margin: 0 100px;}
+  .languages{display:flex;padding: 50px 30px;gap: 50px; }
+  .language{border-radius: 10px;padding: 20px;background-color: white;box-shadow: 2px 2px 20px 2px rgba(0,0,0,0.2);}
+.what-i-do-section{background-color: #FFF8F3;}
+.bg-color-for-section2{background-color: #FFF8F3;margin: 0 100px;}
